docs/gramatica.txt
[ X ] = optional X
{ X } = zero or more X 
X | Y = X or Y
Terminal are in "quotes" or ALL_CAPS

---

program = { topDecl } EOF

topDecl = varDecl | funcDecl

varDecl = "var" IDENTIFIER type [ "=" expr ] ";"

type = "int" | "bool"

funcDecl = "func" IDENTIFIER "(" [ paramList ] ")" [ type ] block

paramList = param { ","  param } 
param = [ "ref" ] IDENTIFIER type

block = "{" { stmt } "}"

stmt = IDENTIFIER stmtTail
    | varDecl 
    | ifStmt
    | forStmt
    | returnStmt
    | printStmt
    | breakStmt
    | continueStmt

breakStmt = "break" ";"

continueStmt = "continue" ";"

forStmt = "for" expr block 

returnStmt = "return" [ expr ] ";" 
    
ifStmt = "if" expr block [ "else" ifTail ]
ifTail = "if" expr block [ "else" ifTail ]
    | block

stmtTail = ":=" expr ";" 
    | "=" expr ";"
    | "(" [ argList ] ")" ";" 

printStmt = ( "print" | "println" ) "(" printArg { "," printArg } ")" ";"

printArg = expr | STRING_LIT

argList = arg { "," arg }
arg = [ "&" ] expr 

expr        = orExpr

orExpr      = andExpr { "||" andExpr }

andExpr     = notExpr { "&&" notExpr }

notExpr     = "!" notExpr | relExpr

relExpr     = addExpr [ relOp addExpr ]

relOp       = "==" | "!=" | "<" | ">" | "<=" | ">="

addExpr     = mulExpr { ( "+" | "-" ) mulExpr }

mulExpr     = unaryExpr { ( "*" | "/" | "%" ) unaryExpr }

unaryExpr   = "-" unaryExpr | primary

primary     = INT_LIT
            | "true"            
            | "false"            
            | IDENTIFIER [ primaryTail ]
            | "(" expr ")"

primaryTail = "(" [ argList ] ")" 
